Use uproot4, fixes #109

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -73,12 +73,14 @@
     "import os\n",
     "\n",
     "import numpy as np\n",
-    "import uproot\n",
+    "import uproot4 as uproot\n",
     "from astropy.io import fits\n",
     "import astropy.units as u\n",
     "import matplotlib.pyplot as plt\n",
     "from astropy.table import QTable\n",
     "from matplotlib.ticker import ScalarFormatter\n",
+    "\n",
+    "from pyirf.binning import bin_center\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -194,11 +196,14 @@
     "rad_max = QTable.read(pyirf_file, hdu='RAD_MAX')[0]\n",
     "\n",
     "\n",
-    "theta_cut_ed = irf_eventdisplay['ThetaCut;1']\n",
+    "theta_cut_ed, edges = irf_eventdisplay['ThetaCut;1'].to_numpy()\n",
+    "\n",
+    "\n",
+    "\n",
     "plt.errorbar(\n",
-    "    10**theta_cut_ed.edges[:-1],\n",
-    "    theta_cut_ed.values,\n",
-    "    xerr=np.diff(10**theta_cut_ed.edges),\n",
+    "    bin_center(10**edges),\n",
+    "    theta_cut_ed,\n",
+    "    xerr=np.diff(10**edges),\n",
     "    ls='',\n",
     "    label='EventDisplay',\n",
     ")\n",
@@ -286,12 +291,10 @@
     "plt.figure(figsize=(12,8))\n",
     "\n",
     "# Get data from event display file\n",
-    "h = irf_eventdisplay[\"DiffSens\"]\n",
-    "bins = 10**h.edges\n",
-    "x = 0.5 * (bins[:-1] + bins[1:])\n",
+    "(y, yerr), edges = irf_eventdisplay[\"DiffSens\"].to_numpy(errors=True)\n",
+    "bins = 10**edges\n",
+    "x = bin_center(bins)\n",
     "width = np.diff(bins)\n",
-    "y = h.values\n",
-    "yerr = np.sqrt(h.variances)\n",
     "\n",
     "fig, (ax_sens, ax_ratio) = plt.subplots(\n",
     "    2, 1,\n",
@@ -376,12 +379,10 @@
    "source": [
     "\n",
     "# Data from EventDisplay\n",
-    "h = irf_eventdisplay[\"EffectiveAreaEtrue\"]\n",
+    "(y, yerr), edges = irf_eventdisplay[\"EffectiveAreaEtrue\"].to_numpy(errors=True)\n",
     "\n",
-    "x = 0.5 * (10**h.edges[:-1] + 10**h.edges[1:])\n",
-    "xerr = 0.5 * np.diff(10**h.edges)\n",
-    "y = h.values\n",
-    "yerr = np.sqrt(h.variances)\n",
+    "x = bin_center(10**edges)\n",
+    "xerr = 0.5 * np.diff(10**edges)\n",
     "\n",
     "plt.errorbar(x, y, xerr=xerr, yerr=yerr, ls='', label=\"EventDisplay\")\n",
     "\n",
@@ -502,11 +503,10 @@
    "outputs": [],
    "source": [
     "# Data from EventDisplay\n",
-    "h = irf_eventdisplay[\"AngRes\"]\n",
-    "x = 0.5 * (10**h.edges[:-1] + 10**h.edges[1:])\n",
-    "xerr = 0.5 * np.diff(10**h.edges)\n",
-    "y = h.values\n",
-    "yerr = np.sqrt(h.variances)\n",
+    "(y, yerr), edges = irf_eventdisplay[\"AngRes\"].to_numpy(errors=True)\n",
+    "x = bin_center(10**edges)\n",
+    "xerr = 0.5 * np.diff(10**edges)\n",
+    "\n",
     "plt.errorbar(x, y, xerr=xerr, yerr=yerr, ls='', label=\"EventDisplay\")\n",
     "\n",
     "# pyirf\n",
@@ -584,11 +584,10 @@
    "outputs": [],
    "source": [
     "# Data from EventDisplay\n",
-    "h = irf_eventdisplay[\"ERes\"]\n",
-    "x = 0.5 * (10**h.edges[:-1] + 10**h.edges[1:])\n",
-    "xerr = np.diff(10**h.edges) / 2\n",
-    "y = h.values\n",
-    "yerr = np.sqrt(h.variances)\n",
+    "(y, yerr), edges = irf_eventdisplay[\"ERes\"].to_numpy(errors=True)\n",
+    "x = bin_center(10**edges)\n",
+    "xerr = np.diff(10**edges) / 2\n",
+    "\n",
     "\n",
     "# Data from pyirf\n",
     "bias_resolution = QTable.read(pyirf_file, hdu='ENERGY_BIAS_RESOLUTION')[1:-1]\n",
@@ -630,12 +629,9 @@
     "from pyirf.utils import cone_solid_angle\n",
     "\n",
     "# Data from EventDisplay\n",
-    "h = irf_eventdisplay[\"BGRate\"]\n",
-    "x = 0.5 * (10**h.edges[:-1] + 10**h.edges[1:])\n",
-    "width = np.diff(10**h.edges)\n",
-    "xerr = width / 2\n",
-    "y = h.values\n",
-    "yerr = np.sqrt(h.variances)\n",
+    "(y, yerr), edges = irf_eventdisplay[\"BGRate\"].to_numpy(errors=True)\n",
+    "x = bin_center(10**edges)\n",
+    "xerr = np.diff(10**edges) / 2\n",
     "\n",
     "# pyirf data\n",
     "\n",
