Fix reprs, improve unit of simulated spectrum, fix figure title

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -343,7 +343,7 @@
     "ax_ratio.set_yticks([], minor=True)\n",
     "\n",
     "# Style settings\n",
-    "ax_sens.set_title('Minimal Flux Needed for 5σ Detection in 50 hours')\n",
+    "ax_sens.set_title('Minimal Flux Satisfying Requirements for 50 hours')\n",
     "ax_sens.set_xscale(\"log\")\n",
     "ax_sens.set_yscale(\"log\")\n",
     "ax_sens.set_ylabel(rf\"$(E^2 \\cdot \\mathrm{{Flux Sensitivity}}) /$ ({unit.to_string('latex')})\")\n",
