Optimize cuts in efficiency steps with maximum efficiency of 80% for EventDisplay comparison

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -352,6 +352,8 @@
     "ax_sens.legend()\n",
     "fig.tight_layout(h_pad=0)\n",
     "\n",
+    "\n",
+    "fig.savefig('/home/maxnoe/sensitivity_cuts_optimized.png', dpi=300)\n",
     "None # to remove clutter by mpl objects"
    ]
   },
@@ -386,7 +388,10 @@
     "\n",
     "plt.errorbar(x, y, xerr=xerr, yerr=yerr, ls='', label=\"EventDisplay\")\n",
     "\n",
-    "for name in ('', '_NO_CUTS', '_ONLY_GH', '_ONLY_THETA'):\n",
+    "# uncomment the other strings to see effective areas\n",
+    "# for the different cut levels. Left out here for better\n",
+    "# visibility of the final effective areas.\n",
+    "for name in ('', ): #'_NO_CUTS', '_ONLY_GH', '_ONLY_THETA'):\n",
     "\n",
     "    area = QTable.read(pyirf_file, hdu='EFFECTIVE_AREA' + name)[0]\n",
     "\n",
