Improve eff area version strings

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -390,17 +390,22 @@
     "# uncomment the other strings to see effective areas\n",
     "# for the different cut levels. Left out here for better\n",
     "# visibility of the final effective areas.\n",
-    "for name in ('', ): #'_NO_CUTS', '_ONLY_GH', '_ONLY_THETA'):\n",
+    "suffixes = [\n",
+    "    ''\n",
+    "#     '_NO_CUTS',\n",
+    "#     '_ONLY_GH',\n",
+    "#     '_ONLY_THETA',\n",
+    "]\n",
     "\n",
-    "    area = QTable.read(pyirf_file, hdu='EFFECTIVE_AREA' + name)[0]\n",
-    "\n",
-    "    \n",
+    "for suffix in suffixes: \n",
+    "    area = QTable.read(pyirf_file, hdu='EFFECTIVE_AREA' + suffix)[0]\n",
+    "   \n",
     "    plt.errorbar(\n",
     "        0.5 * (area['ENERG_LO'] + area['ENERG_HI']).to_value(u.TeV)[1:-1],\n",
     "        area['EFFAREA'].to_value(u.m**2).T[1:-1, 0],\n",
     "        xerr=0.5 * (area['ENERG_LO'] - area['ENERG_HI']).to_value(u.TeV)[1:-1],\n",
     "        ls='',\n",
-    "        label='pyirf ' + name,\n",
+    "        label='pyirf ' + suffix,\n",
     "    )\n",
     "\n",
     "# Style settings\n",
