--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -536,7 +536,7 @@
     "plt.ylim(2.e-2, 1)\n",
     "plt.xscale(\"log\")\n",
     "plt.yscale(\"log\")\n",
-    "plt.xlabel(\"True energy / TeV\")\n",
+    "plt.xlabel(\"Reconstructed energy / TeV\")\n",
     "plt.ylabel(\"Angular Resolution / deg\")\n",
     "plt.grid(which=\"both\")\n",
     "plt.legend(loc=\"best\")\n",
