--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -604,16 +604,16 @@
     "# Plot function\n",
     "plt.errorbar(x, y, xerr=xerr, yerr=yerr, ls='', label=\"EventDisplay\")\n",
     "plt.errorbar(\n",
-    "    0.5 * (bias_resolution['true_energy_low'] + bias_resolution['true_energy_high']).to_value(u.TeV),\n",
+    "    0.5 * (bias_resolution['reco_energy_low'] + bias_resolution['reco_energy_high']).to_value(u.TeV),\n",
     "    bias_resolution['resolution'],\n",
-    "    xerr=0.5 * (bias_resolution['true_energy_high'] - bias_resolution['true_energy_low']).to_value(u.TeV),\n",
+    "    xerr=0.5 * (bias_resolution['reco_energy_high'] - bias_resolution['reco_energy_low']).to_value(u.TeV),\n",
     "    ls='',\n",
     "    label='pyirf'\n",
     ")\n",
     "plt.xscale('log')\n",
     "\n",
     "# Style settings\n",
-    "plt.xlabel(r\"$E_\\mathrm{True} / \\mathrm{TeV}$\")\n",
+    "plt.xlabel(r\"$E_\\mathrm{reco} / \\mathrm{TeV}$\")\n",
     "plt.ylabel(\"Energy resolution\")\n",
     "plt.grid(which=\"both\")\n",
     "plt.legend(loc=\"best\")\n",
