Fix background rate label unit

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -677,7 +677,7 @@
     "# Style settings\n",
     "plt.xscale(\"log\")\n",
     "plt.xlabel(r\"$E_\\mathrm{Reco} / \\mathrm{TeV}$\")\n",
-    "plt.ylabel(\"Background rate / (s⁻¹ TeV⁻¹) \")\n",
+    "plt.ylabel(\"Background rate / (s⁻¹) \")\n",
     "plt.grid(which=\"both\")\n",
     "plt.legend(loc=\"best\")\n",
     "plt.yscale('log')\n",
