Update EventDisplay comparison notebook

--- a/docs/notebooks/comparison_with_EventDisplay.ipynb
+++ b/docs/notebooks/comparison_with_EventDisplay.ipynb
@@ -73,7 +73,7 @@
     "import os\n",
     "\n",
     "import numpy as np\n",
-    "import uproot4 as uproot\n",
+    "import uproot\n",
     "from astropy.io import fits\n",
     "import astropy.units as u\n",
     "import matplotlib.pyplot as plt\n",
@@ -291,7 +291,8 @@
     "plt.figure(figsize=(12,8))\n",
     "\n",
     "# Get data from event display file\n",
-    "(y, yerr), edges = irf_eventdisplay[\"DiffSens\"].to_numpy(errors=True)\n",
+    "y, edges = irf_eventdisplay[\"DiffSens\"].to_numpy()\n",
+    "yerr = irf_eventdisplay[\"DiffSens\"].errors()\n",
     "bins = 10**edges\n",
     "x = bin_center(bins)\n",
     "width = np.diff(bins)\n",
@@ -380,7 +381,8 @@
    "source": [
     "\n",
     "# Data from EventDisplay\n",
-    "(y, yerr), edges = irf_eventdisplay[\"EffectiveAreaEtrue\"].to_numpy(errors=True)\n",
+    "y, edges = irf_eventdisplay[\"EffectiveAreaEtrue\"].to_numpy()\n",
+    "yerr = irf_eventdisplay[\"EffectiveAreaEtrue\"].errors()\n",
     "\n",
     "x = bin_center(10**edges)\n",
     "xerr = 0.5 * np.diff(10**edges)\n",
@@ -512,7 +514,9 @@
    "outputs": [],
    "source": [
     "# Data from EventDisplay\n",
-    "(y, yerr), edges = irf_eventdisplay[\"AngRes\"].to_numpy(errors=True)\n",
+    "y, edges = irf_eventdisplay[\"AngRes\"].to_numpy()\n",
+    "yerr = irf_eventdisplay[\"AngRes\"].errors()\n",
+    "\n",
     "x = bin_center(10**edges)\n",
     "xerr = 0.5 * np.diff(10**edges)\n",
     "\n",
@@ -593,7 +597,8 @@
    "outputs": [],
    "source": [
     "# Data from EventDisplay\n",
-    "(y, yerr), edges = irf_eventdisplay[\"ERes\"].to_numpy(errors=True)\n",
+    "y, edges = irf_eventdisplay[\"ERes\"].to_numpy()\n",
+    "yerr = irf_eventdisplay[\"ERes\"].errors()\n",
     "x = bin_center(10**edges)\n",
     "xerr = np.diff(10**edges) / 2\n",
     "\n",
@@ -638,7 +643,8 @@
     "from pyirf.utils import cone_solid_angle\n",
     "\n",
     "# Data from EventDisplay\n",
-    "(y, yerr), edges = irf_eventdisplay[\"BGRate\"].to_numpy(errors=True)\n",
+    "y, edges = irf_eventdisplay[\"BGRate\"].to_numpy()\n",
+    "yerr = irf_eventdisplay[\"BGRate\"].errors()\n",
     "x = bin_center(10**edges)\n",
     "xerr = np.diff(10**edges) / 2\n",
     "\n",
@@ -684,6 +690,13 @@
     "\n",
     "None # to remove clutter by mpl objects"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
