--- a/docs/changes/211.maintenance.rst
+++ b/docs/changes/211.maintenance.rst
@@ -4,5 +4,5 @@ for unit testing. Specifically the fixture contains the contents of:
 * Prod5-North-40deg-AverageAz-4LSTs.180000s-v0.1.fits.gz
 * Prod5-North-60deg-AverageAz-4LSTs.180000s-v0.1.fits.gz
 
-The user has to download these irfs to ``pyirf/resources/irfs/`` using ``download_irfs.py``,
+The user has to download these irfs to ``irfs/`` using ``download_irfs.py``,
 github's CI does so automatically and caches them for convenience.
