Change structure to common interpolation module

--- a/docs/changes/210.api.rst
+++ b/docs/changes/210.api.rst
@@ -1,3 +1,2 @@
 Migrating the interpolation methods from ``pyirf.interpolation`` to interpolator 
-objects in ``pyirf.interpolators``, allowing for later inheritance for new 
-algorithms and reusability.
+objects, allowing for later inheritance for new algorithms and reusability.
