Use common API, have sepearte NearestNeighbor classes for PDFs and Parametrized IRFs

--- a/docs/changes/232.feature.rst
+++ b/docs/changes/232.feature.rst
@@ -1,1 +1,2 @@
-This PR adds a NearestNeighborSearcher for inter-/ and extrapolation
+This PR adds a DiscretePDFNearestNeighborSearcher and a ParametrizedNearestNeighborSeacher to support nearest neighbor approaches 
+as alternatives to inter-/ and extrapolation
