--- a/docs/notebooks/fact_example.ipynb
+++ b/docs/notebooks/fact_example.ipynb
@@ -99,7 +99,8 @@
     "    spectral_index=-2.7,\n",
     "    n_showers=12600000,\n",
     "    max_impact=300 * u.m,\n",
-    "    viewcone=0 * u.deg,\n",
+    "    viewcone_min=0 * u.deg,\n",
+    "    viewcone_max=0 * u.deg,\n",
     ")"
    ]
   },
@@ -301,6 +302,7 @@
     "\n",
     "plt.xlim(true_energy_bins.min().to_value(u.GeV), true_energy_bins.max().to_value(u.GeV))    \n",
     "plt.yscale('log')\n",
+    "plt.xscale('log')\n",
     "plt.legend()\n",
     "\n",
     "print(aeff_gammapy)"
@@ -504,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
